# tv-mcp

./: .env.example  .gitignore  .vercelignore  README.md  paper_trades.db  pyproject.toml  server.py  vercel.json
docs/: configuration.md  deployment.md  http-api.md  paper-trading-guide.md
new_test/: __init__.py  conftest.py  test_entrypoint_compatibility.py  test_legacy_paths_unchanged.py
new_test/http/: __init__.py  test_auth_edge_cases.py  test_client_routes_contract.py  test_new_vercel.py  test_public_routes.py  test_scaffold_imports.py
new_test/stdio/: __init__.py  test_contracts.py  test_core_auth_cache.py  test_core_transforms.py  test_core_validators.py  test_scaffold_imports.py  test_service_historical.py  test_service_ideas.py  test_service_minds.py  test_service_news.py  test_service_options.py  test_service_technicals.py
new_vercel/: __init__.py  app.py  auth.py  schemas.py
new_vercel/routers/: __init__.py  admin.py  client.py  public.py
new_vercel/services/: __init__.py
plans/: mcp-rebuild-tv-mcp-complete.md  mcp-rebuild-tv-scrapper-phase-1-complete.md  mcp-rebuild-tv-scrapper-plan.md  paper-trading-complete.md  paper-trading-phase-10-complete.md  paper-trading-phase-9-complete.md  paper-trading-plan.md
scripts/: export_trades.py  reset_orders.py  setup_paper_trading.py  vercel_sse_smoke_test.py
src/tradingview_mcp/: config.py  main.py  tradingview_tools.py  utils.py  validators.py
src/tv_mcp/: __init__.py
src/tv_scrapper/: __init__.py
tests/: __init__.py  conftest.py  integration_data_test.py  test_entrypoint_compatibility.py  test_historical_errors.py
tests/http/: __init__.py  test_auth_edge_cases.py  test_client_integration.py  test_endpoint_ideas.py  (+10 more)
vercel/: __init__.py  app.py  auth.py  config.py  index.py  models.py  schemas.py
(+66 files in other folders)
